--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/server.ts",
     "start": "ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,20 +12,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/socket.io": "^3.0.2",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "multer-gridfs-storage": "^5.0.2",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.7"
+    "@types/express": "^4.17.21",
+    "@types/express-serve-static-core": "^4.17.38",
+    "@types/gridfs-stream": "^0.5.39",
+    "@types/jsonwebtoken": "^9.0.7",
+    "nodemon": "^3.1.9"
   }
 }
