--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "express-slow-down": "^2.0.3",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2",
-    "multer-gridfs-storage": "^5.0.2",
+    "mongoose": "^8.10.0",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
@@ -44,6 +44,8 @@
     "@types/express-slow-down": "^1.3.5",
     "@types/gridfs-stream": "^0.5.39",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/mongodb": "^4.0.6",
+    "@types/multer": "^1.4.12",
     "nodemon": "^3.1.9"
   }
 }
