--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/csurf": "^1.11.5",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/express-rate-limit": "^5.1.3",
     "@types/express-serve-static-core": "^4.17.38",
