--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,17 @@
             "source": "/(.*)",
             "destination": "src/server.ts"
         }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                { "key": "Access-Control-Allow-Origin", "value": "https://mention.earth" },
+                { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,PATCH,OPTIONS" },
+                { "key": "Access-Control-Allow-Headers", "value": "Content-Type,Authorization,X-CSRF-Token,X-Requested-With,Accept,Accept-Version,Content-Length,Content-MD5,Date,X-Api-Version" },
+                { "key": "Access-Control-Allow-Credentials", "value": "true" },
+                { "key": "Access-Control-Max-Age", "value": "86400" }
+            ]
+        }
     ]
 }
