--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/express-serve-static-core": "^4.17.38",
     "@types/express-slow-down": "^1.3.5",
     "@types/gridfs-stream": "^0.5.39",
+    "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongodb": "^4.0.6",
     "@types/multer": "^1.4.12",
